--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="no_permissions">应用需要必要的运行权限</string>
     <string name="camera_pop_camera">相机拍摄</string>
     <string name="action_settings">Settings</string>
-
+    <string name="menu_settings">Settings</string>
     <string name="camera_pop_album">从相册选取</string>
     <string name="settings">设置</string>
     <string name="help">帮助</string>
