--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="Signin">登录</string>
     <string name="Loggingin">正在登录....</string>
     <string name="homepage">首页</string>
+    <string name="sure">确定</string>
 </resources>
